<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minecraft Launcher</string>
    <string name="play_now">Oyna</string>
    <string name="settings">Ayarlar</string>
    <string name="player_name">Oyuncu Adı</string>
    <string name="java_path">Java Yolu</string>
    <string name="java_args">Java Argümanları</string>
    <string name="server_ip">Sunucu IP</string>
    <string name="server_port">Sunucu Portu</string>
    <string name="memory">Maks RAM (MB)</string>
    <string name="saved_successfully">Ayarlar kaydedildi</string>
    <string name="launching">Başlatılıyor…</string>
    <string name="launcher_title">Minecraft Java Launcher</string>
    <string name="menu_home">Ana Sayfa</string>
</resources>
